--- a/package.json
+++ b/package.json
@@ -13,9 +13,16 @@
     "@remix-run/node": "^1.3.5",
     "@remix-run/react": "^1.3.5",
     "@remix-run/serve": "^1.3.5",
+    "hast-util-to-string": "^2.0.0",
+    "hastscript": "^7.0.2",
     "mdx-bundler": "^9.0.0",
     "react": "^18.0.0",
-    "react-dom": "^18.0.0"
+    "react-dom": "^18.0.0",
+    "refractor": "^4.5.0",
+    "remark-directive": "^2.0.1",
+    "remark-parse": "^10.0.1",
+    "ts-node": "^10.7.0",
+    "unist-util-visit": "^4.1.0"
   },
   "devDependencies": {
     "@remix-run/dev": "^1.3.5",
