--- a/package.json
+++ b/package.json
@@ -16,19 +16,20 @@
     "hast-util-to-string": "^2.0.0",
     "hastscript": "^7.0.2",
     "mdx-bundler": "^9.0.0",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "refractor": "^4.5.0",
     "remark-directive": "^2.0.1",
     "remark-parse": "^10.0.1",
+    "remix-utils": "^3.0.0",
     "ts-node": "^10.7.0",
     "unist-util-visit": "^4.1.0"
   },
   "devDependencies": {
     "@remix-run/dev": "^1.3.5",
     "@remix-run/eslint-config": "^1.3.5",
-    "@types/react": "^18.0.0",
-    "@types/react-dom": "^18.0.0",
+    "@types/react": "^17.0.2",
+    "@types/react-dom": "^17.0.2",
     "eslint": "^8.11.0",
     "typescript": "^4.5.5"
   },
